# zero_2_prod

./: .env  Cargo.toml  Dockerfile  sqlx-data.json
migrations/: 20220404042448_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
