[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.19"
config = "0.13.0"
env_logger = "0.9.0"
reqwest = "0.11.10"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["postgres", "runtime-actix-rustls", "macros", "uuid", "chrono", "migrate", "offline"] }
tokio = { version = "1.17.0", features = ["full", "rt-multi-thread"] }
tracing = { version = "0.1.32", features = ["log"] }
tracing-actix-web = "0.5.1"
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.10", features = ["registry", "env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
once_cell = "1"
